Falta ajustar a mundança nas letras cores

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Forca Termo</title>
-  <link rel="stylesheet" href="reset.css"/>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/reset.css"/>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -12,14 +12,20 @@
 
   <div id="board" class="board"></div>
 
-  <div class="controls">
+   <div class="controls">
     <input id="guessInput" type="text" autocomplete="off">
     <button id="submitBtn">Enviar</button>
   </div>
 
   <div id="keyboard" clas="keyboard"></div>
 
-  <p id="message"></p>
+   <p id="message"></p>
+
+ 
+
+  
+
+ 
 
   <script type="module" src="js/main.js"></script>
 
