fixing keyboard colors

--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
     <button id="submitBtn">Enviar</button>
   </div>
 
-  <div id="keyboard" clas="keyboard"></div>
+  <div id="keyboard" class="keyboard"></div>
 
    <p id="message"></p>
 
- 
-
-  
-
- 
 
   <script type="module" src="js/main.js"></script>
 
